--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -8,3 +8,7 @@ jobs: # Multiple jobs; runs parallel by default
         run: echo "Hello World!!!"
       - name: Print goodbye
         run: echo "Done - bye"
+      - name: Multi-line shell commands
+        run: |
+            echo "First output"
+            echo "Second output"
